:ambulance: <section> area overlapping issue fixed

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{font-family:"Open Sans"; overflow-x: hidden;}
 body nav.navbar { font-family: "Open Sans"; }
 
 section {width: 100%;}
+section[class*="-area"] {position: relative; clear:both; }
 
 /*======== CONTENT ========*/
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{font-family:"Proxima Nova";}
@@ -1053,10 +1054,6 @@ http://jsfiddle.net/gmkhussain/awqs01zc/
 .accordion-plus .panel-title .panel-default:first-child a:before, .accordion-plus .panel-title a.collapsed:before { content: "\2b"; padding-left: 2px; }
 .accordion-plus .panel-title a:before{ content: "\2212"; font-family: 'Glyphicons Halflings'; }
 /***./accordion***/	
-
-section[class*="-area"] {
-    position: relative;
-}
 
 
 /*filler*/
